Rules now with users

--- a/views/sections/importers/index.html
+++ b/views/sections/importers/index.html
@@ -8,3 +8,14 @@
   <div id="table" hx-get="/importers/table" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
 </div>
+<script>
+  // Function to initialize select2
+  function initializeSelect2() {
+    $('.js-example-basic-multiple').select2({
+      theme: "classic"
+    });
+  }
+  // Initialize select2 after htmx from:body load
+  document.body.addEventListener('htmx:load', function (event) {initializeSelect2();});
+</script>
+
