--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -6,7 +6,7 @@
     <div class="w-1/2 ">
       <span class="text-md text-gray-800">Bot status:</span>
       <span class='text-gray-700 bg-gray-100 border border-gray-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
-        hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">
+        hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="revealed delay:1s, every 5s, click from:#startstop" hx-target="this">
         Unknown
       </span>
       <br>
