--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -14,7 +14,7 @@
       <span class="text-md text-gray-800">Allowed users:</span>
       <span class='text-indigo-700 bg-indigo-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="revealed, click from:#updateUsers delay:1s"
         hx-swap="innerHTML" hx-target="this" hx-post="/telegram/command"
-        hx-vals='{"command": "getAllowedUsers"}'></span>
+        hx-vals='{"command": "getAllowedUsers"}'>-</span>
       <br>
       <br>
       <button id="startstop" class='text-green-700 bg-green-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="click"
