--- a/views/sections/importers/index.html
+++ b/views/sections/importers/index.html
@@ -10,12 +10,12 @@
 </div>
 <script>
   // Function to initialize select2
-  function initializeSelect2() {
+  function initializeSelectImport() {
     $('.js-example-basic-multiple').select2({
       theme: "classic"
     });
   }
   // Initialize select2 after htmx from:body load
-  document.body.addEventListener('htmx:load', function (event) {initializeSelect2();});
+  document.body.addEventListener('htmx:load', function (event) {initializeSelectImport();});
 </script>
 
