Steam on notebook

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -6,10 +6,10 @@
   {{template "head" .}}
 </head>
 
-<body>
+<body class="bg-stone-50" >
   <div class="flex">
     {{template "sidebar" .}}
-    <main class="flex-1 overflow-y-auto bg-white lg:h-screen">
+    <main class="flex-1 overflow-y-auto  lg:h-screen">
       <div id="contenido">
       </div>
     </main>
