--- a/views/sections/settings/categories.html
+++ b/views/sections/settings/categories.html
@@ -1,8 +1,8 @@
-<div id="categories" class="mx-5 w-full rounded-lg" hx-get="/settings/categories"
+<div id="categories" class="px-4 mx-8 w-full rounded-lg" hx-get="/settings/categories"
   hx-trigger="reloadCategoriesConfig from:body" hx-target="this" hx-swap="outerHTML">
-  <span class="text-xl block p-2 w-1/3 pt-2 text-orange-700"><i class='bx bx-category-alt'></i> Categories</span>
-  <div class="min-w-[750px] min-h-[200px] border border-gray-300 rounded-lg p-3 flex">
-    <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg p-3 w-full">
+  <span class="text-xl block p-2  pt-2 text-orange-700"><i class='bx bx-category-alt'></i> Categories</span>
+  <div class="border border-gray-300 rounded-lg p-3 flex">
+    <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg p-3 ">
       <thead class="bg-gray-50">
         <tr>
           <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
@@ -25,18 +25,18 @@
         {{ $colors := nameToColor $name }}
         <tr>
           {{ if ne $name "Unknown" }}
-          <td class='px-6 py-2 whitespace-nowrap text-sm font-medium text-gray-900'>
+          <td class='px-3 py-2 whitespace-nowrap text-sm font-medium text-gray-900'>
             <span contenteditable="true" id="categoryEdit{{$id}}"
               class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 py-0.5 rounded'>{{$name}}</span>
           </td>
           {{else}}
-          <td class='px-6 py-2 whitespace-nowrap text-sm font-medium text-gray-900'>
+          <td class='px-3 py-2 whitespace-nowrap text-sm font-medium text-gray-900'>
             <span
               class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 py-0.5 rounded'>{{$name}}</span>
           </td>
           {{end}}
           {{ if ne $name "Unknown" }}
-          <td class="px-6 py-2 whitespace-nowrap text-right text-sm font-medium">
+          <td class="px-3 py-2 text-right text-sm font-medium">
             <button hx-put="/settings/categories/{{ $id }}"
               hx-vals='js:{category_name: document.getElementById("categoryEdit{{$id}}").innerHTML }'
               hx-target="#mitoast" hx-swap="innerHTML" class="text-indigo-600 hover:text-indigo-900">Edit</button>
@@ -44,8 +44,8 @@
               class="text-red-600 hover:text-red-900 ml-4">Delete</button>
           </td>
           {{ else }}
-          <td class="px-6 py-2 whitespace-nowrap text-right text-lg text-gray-500 font-medium">
-            <small><i class='bx bx-info-circle'></i> Restricted. Used for imported expenses. </small>
+          <td class="px-1 py-2 whitespace-nowrap text-right text-lg text-gray-500 font-medium">
+            <small><i class='bx bx-info-circle'></i> Used for imported expenses. </small>
           </td>
         </tr>
         {{ end }}
