--- a/views/sections/settings/index.html
+++ b/views/sections/settings/index.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col md:flex-row my-5 mr-8">
-  <div class="p-2 m-0 md:w-full w-1/2">
+  <div class="p-2 m-0 w-1/3">
     <div id="categories" hx-get="/settings/categories" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
   </div>
-  <div class="p-2 m-0 md:w-full w-1/2">
+  <div class="p-2 m-0 w-2/3">
     <div id="telegram" hx-get="/settings/telegram" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
     <br>
