--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -34,7 +34,7 @@
         Available telegram commands:<br><br>
         <span style="color:#1DA1DE;">/categories </span> - Sends you all the categories available.<br>
         <span style="color:#1DA1DE;">/summary</span> - Sends summar of last month's expenses.<br>
-        <span style="color:#1DA1DE;">/unknown</span> - Categorize unknown expenses. <span style="color:#1DA1DE;">/done</span> and continue in another moment.<br>
+        <span style="color:#1DA1DE;">/unknown</span> - Categorize imported expenses. <span style="color:#1DA1DE;">/done</span> and continue in another moment.<br>
         <span style="color:#1DA1DE;">/new</span>- Creates a new expense. <span style="color:#1DA1DE;">/fix</span> if you made made a mistake.<br>
         <span style="color:#1DA1DE;">/ping</span> - Checks bot availability and health.<br>
         <span style="color:#1DA1DE;">/help</span> - Displays this menu.<br>
