--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -18,7 +18,7 @@
 
 
 <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-<title>{{ .Title }}</title>
+<title>🧉 ExpenseMate</title>
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
   integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
