--- a/views/sections/importers/n26.html
+++ b/views/sections/importers/n26.html
@@ -1,4 +1,4 @@
-<div class="p-10 items-center justify-center w-1/2">
+<div class="mb-4 p-4 border bg-neutral-50 shadow-md border-teal-600 xl:w-1/2 w-full">
   <div class="overflow-x-auto">
     <div class="flex">
       <span class="text-xl w-1/3 pt-2 text-gray-700">N26</span>
