--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -24,7 +24,7 @@
           <th class="px-4 py-3 text-left">Action</th>
         </tr>
       </thead>
-      <tbody class="text-blue-gray-900 animate__headShake animate__animated">expenta
+      <tbody class="text-blue-gray-900 animate__headShake animate__animated">
         <tr id="addRow"></tr>
         {{range .Expenses}}
         <tr id="expenseRow{{ .ID }}" class="border-b border-blue-gray-200 p-0 animate__animated">
