--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -6,18 +6,29 @@
   {{template "head" .}}
 </head>
 
-<body class="bg-stone-50" >
+<body class="bg-stone-50">
   <div class="flex">
+    <!-- Sidebar toggle button for mobile -->
+    <button id="sidebarToggle" class="lg:hidden p-2 m-2 bg-gray-200 rounded-md" onclick="toggleSidebar()">
+      <i class="bx bx-menu text-xl"></i>
+    </button>
     {{template "sidebar" .}}
-    <main class="flex-1 overflow-y-auto  lg:h-screen">
+    <main class="flex-1 overflow-y-auto lg:h-screen">
       <div id="contenido">
       </div>
     </main>
   </div>
   <div id="mitoast" class="absolute m-4 right-0 z-50 top-0 ">
   </div>
+  <script>
+    function toggleSidebar() {
+      var sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('hidden');
+    }
+  </script>
 </body>
 {{template "scripts" .}}
 
 </html>
 {{end}}
+
