--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -6,19 +6,18 @@
 <meta charset="UTF-8" />
 
 
-<!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png"> -->
-<!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png"> -->
-<!-- <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png"> -->
-<!-- <link rel="manifest" href="/assets/icons/site.webmanifest"> -->
-<!-- <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5"> -->
-<!-- <link rel="shortcut icon" href="/assets/icons/favicon.ico"> -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+<link rel="manifest" href="/assets/site.webmanifest">
+<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/assets/img/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<!-- <meta name="msapplication-config" content="/assets/icons/browserconfig.xml"> -->
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#349A6A">
 
 
 <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-<title>🧉 ExpenseMate</title>
+<title>ExpenseMate 🧉</title>
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
   integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
