--- a/views/sections/settings/users.html
+++ b/views/sections/settings/users.html
@@ -1,4 +1,4 @@
-<div id="users" class="mx-5 w-full rounded-lg" hx-get="/settings/users" hx-trigger="reloadUsersConfig from:body" hx-target="this">
+<div id="users" class="w-full rounded-lg" hx-get="/settings/users" hx-trigger="reloadUsersConfig from:body" hx-target="this">
   <span class="text-xl block p-2 pt-2 text-indigo-500"><i class='bx bx-user'></i> Users</span>
   <div class="min-w-[750px] min-h-[200px] block border border-gray-300 rounded-lg p-3">
     <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg w-full">
