--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -6,7 +6,7 @@
   {{template "head" .}}
 </head>
 
-<body class="bg-stone-50">
+<body class="bg-gray-50">
   <div class="flex">
     <!-- Sidebar toggle button for mobile -->
     <button id="sidebarToggle" class="lg:hidden p-2 m-2 bg-gray-200 rounded-md" onclick="toggleSidebar()">
