--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -1,4 +1,4 @@
-<div id="filters" class="mb-4 p-4 border bg-neutral-50 shadow-md border-teal-600">
+<div id="filters" class="mb-4 p-4 border bg-neutral-50 shadow-md border-gray-300">
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
     <div class="flex flex-col">
       <label for="product" class="block text-sm font-medium text-gray-700">Product</label>
