--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -1,5 +1,5 @@
 {{define "sidebar"}}
-<div id="sidebar" class="hidden lg:flex min-h-screen flex-col w-auto border-r border-neutral-200 shadow-sm bg-emerald-50 overflow-hidden">
+<div id="sidebar" class="hidden lg:flex min-h-screen flex-col w-auto border-r border-neutral-200 shadow-sm bg-stone-50 overflow-hidden">
   <div class="flex items-center justify-center h-25 mt-2 pointer-events-none">
     <img width="90" src="/assets/img/logo.png" alt="">
     <h1 class="text-2xl pr-2 pt-4 text-slate-800">Expense<br>
@@ -46,6 +46,11 @@
     </li>
     <li>
   </ul>
+  <div class="absolute left-0 text-lg text-gray-500 bottom-0 m-2">
+    <a href="https://github.com/contre95/expense-mate" target="_blank">
+  <i class='bx bxl-github text-3xl' ></i>
+    </a>
+</div>
 </div>
 <script>
   // Function to initialize select2
