--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -12,7 +12,7 @@
     <button id="editAll" class="float-right m-2 mb-3 font-medium text-teal-600 hover:text-teal-500" hx-trigger="click">
       <i class='bx bx-edit-alt' ></i>Edit all
     </button>
-    <table class="min-w-full bg-stone-50 border border-gray-300">
+    <table class="min-w-full border bg-neutral-50 shadow-md border-gray-300">
       <thead class="rounded-full">
         <tr class="bg-gray-100 border border-gray-300 text-gray-700 rounded-lg ">
           <th class="px-4 py-3 text-left">Date</th>
@@ -24,7 +24,7 @@
           <th class="px-4 py-3 text-left">Action</th>
         </tr>
       </thead>
-      <tbody class="text-blue-gray-900 animate__headShake animate__animated">
+      <tbody class="text-gray-700 text-md animate__headShake animate__animated">
         <tr id="addRow"></tr>
         {{range .Expenses}}
         <tr id="expenseRow{{ .ID }}" class="border-b border-blue-gray-200 p-0 animate__animated">
