--- a/views/sections/importers/table.html
+++ b/views/sections/importers/table.html
@@ -1,6 +1,6 @@
 <div id="table" hx-get="/importers/table" hx-trigger="reloadImportTable from:body" hx-swap="outerHTML">
   <div class="overflow-x-auto">
-    <span class="ml-2 text-xl text-gray-700">{{ .ExpensesCount }} Uncatalogged expenses</span>
+    <span class="ml-2 text-xl text-gray-400">{{ .ExpensesCount }} Uncatalogged expenses</span>
     <br>
     <span class="ml-2 text-md text-gray-500">Expenses will appear in this section when imported for you to manually set
       a
@@ -13,9 +13,9 @@
     <!--   class="float-right m-2 mb-3 font-medium text-pink-600 hover:text-pink-800"> -->
     <!--   Refresh -->
     <!-- </button> -->
-    <table class="min-w-full border shadow-md rounded-xl border-gray-200">
+    <table class="min-w-full border bg-neutral-50 shadow-md border-gray-300">
       <thead class="rounded-full">
-        <tr class="bg-slate-100 text-gray-700 rounded-lg ">
+        <tr class="bg-slate-100 text-gray-400 rounded-lg ">
           <th class="px-4 py-3 text-left">Date</th>
           <th class="px-4 py-3 text-left">Shop</th>
           <th class="px-4 py-3 text-left">Product</th>
@@ -25,7 +25,7 @@
           <th class="px-4 py-3 text-left">Action</th>
         </tr>
       </thead>
-      <tbody class="text-green-gray-900 animate__headShake animate__animated">
+      <tbody class="animate__headShake animate__animated">
         {{ $categories := .Categories }}
         {{ $allUsers := .Users}}
         {{range .Expenses}}
@@ -44,7 +44,7 @@
           </td>
           <td class="py-0 px-4">
             <select id="category" name="category"
-              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-gray-600 border-gray-500 block w-full p-1">
+              class="bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-gray-600 border-gray-500 block w-full p-1">
               {{ $current := .Category.ID }}
               {{ range $id, $name := $categories }}
               {{ if eq $current $id}}
@@ -57,7 +57,7 @@
           </td>
           <td class="py-1 px-4">
             <select id="usersImport{{.ID}}" style="width: 75%"
-              class="js-example-basic-multiple bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 border-green-500 block w-full"
+              class="js-example-basic-multiple bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-green-500 border-green-500 block w-full"
               name="users[]" multiple="multiple">
               {{ range $id, $user := $allUsers }}
               <option value="{{$id}}" {{ if userInMap $expenseUsers $id}}selected{{end}}>{{$user.DisplayName}}</option>
@@ -102,9 +102,9 @@
   </div>
   <br>
   <div class="flex flex-col items-center">
-    <span class="text-sm text-gray-700 dark:text-gray-400">
-      Showing page <span class="font-semibold text-gray-900 dark:text-white">{{.CurrentPage}}</span> (<span
-        class="font-semibold text-gray-900 dark:text-white">{{.PageSize}}</span> Entries)
+    <span class="text-sm text-gray-400 dark:text-gray-400">
+      Showing page <span class="font-semibold text-gray-500 dark:text-white">{{.CurrentPage}}</span> (<span
+        class="font-semibold text-gray-500 dark:text-white">{{.PageSize}}</span> Entries)
     </span>
     <div class="inline-flex mt-2 xs:mt-0">
       <button hx-get="/importers/table?page_num={{.PrevPage}}" hx-swap="outerHTML" hx-target="#table" hx-push-url="true"
