--- a/views/sections/settings/index.html
+++ b/views/sections/settings/index.html
@@ -1,18 +1,16 @@
-<div class="flex flex-col md:flex-row my-5 mr-8">
-  <div class="p-2 m-0 w-full md:w-1/3">
+<div class="mx-5 mr-8">
+  <div class="p-2 m-0">
     <div id="categories" hx-get="/settings/categories" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
-    </div>
-  </div>
-  <div class="p-2 m-0 w-full md:w-2/3">
-    <div id="telegram" hx-get="/settings/telegram" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
     <br>
     <div id="users" hx-get="/settings/users" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+    </div>
+  </div>
+    <div id="telegram" hx-get="/settings/telegram" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
     <br>
     <div id="rules" hx-get="/settings/rules" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
     <br>
-  </div>
 </div>
 
