--- a/views/sections/settings/rules.html
+++ b/views/sections/settings/rules.html
@@ -1,7 +1,7 @@
-<div id="rules" class="w-full rounded-lg" hx-get="/settings/rules" hx-trigger="reloadRulesConfig from:body"
+<div id="rules" class="rounded-lg" hx-get="/settings/rules" hx-trigger="reloadRulesConfig from:body"
   hx-target="this">
   <span class="text-xl block p-2 pt-2 text-purple-500"><i class='bx bx-ruler'></i> Rules</span>
-  <div class="min-w-[750px] min-h-[200px] border border-gray-300 rounded-lg p-3 flex">
+  <div class=" min-h-[200px] block inline-flex border border-gray-300 rounded-lg p-3">
     <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg p-3 w-full">
       <thead class="bg-gray-50">
         <tr>
