--- a/views/sections/settings/telegramStatus.html
+++ b/views/sections/settings/telegramStatus.html
@@ -1,11 +1,14 @@
 {{ $status := .Status }}
 {{ if eq $status "running" }}
 <span class='text-green-700 bg-green-100 border border-green-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
-  hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">{{ .Status }}</span>
+  hx-get="/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">{{ .Status
+  }}</span>
 {{else if eq $status "stopped" }}
-<span class='text-green-700 bg-green-100 border border-green-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
-  hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">{{ .Status }}</span>
+<span class='text-red-700 bg-red-100 border border-red-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
+  hx-get="/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">{{ .Status
+  }}</span>
 {{else}}
 <span class='text-red-500 bg-gray-200 border border-gray-300 text-md font-medium me-2 px-2.5 py-0.5 rounded'
-  hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">TOKEN NOT SET</span>
+  hx-get="/telegram/status" hx-swap="outerHTML" hx-trigger="every 5s, click from:#startstop" hx-target="this">TOKEN NOT
+  SET</span>
 {{end}}
