Fix telegram bot

--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -4,10 +4,12 @@
   <div class="min-h-[200px] block inline-flex border border-gray-300 rounded-lg p-3">
     <div id="telegram-not-table" class=" border border-gray-300 rounded-lg p-3 w-full flex flex-col lg:flex-row">
       <div class="w-full lg:w-1/2">
-        <span class="text-md text-gray-800">Bot status:</span>
+        <span class="text-md text-gray-800">Bot status
+          (<button id="refresh" class="text-green-500 text-lg"><i  class='bx bx-refresh'></i></button>)
+          :</span>
         <span class='text-gray-700 bg-gray-100 border border-gray-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
           hx-get="/telegram/status" hx-swap="outerHTML"
-          hx-trigger="revealed delay:1s, every 5s, click from:#startstop" hx-target="this">
+          hx-trigger="click from:#refresh, every 5s, click from:#startstop" hx-target="this">
           Unknown
         </span>
         <br>
