--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -7,6 +7,16 @@
     </h1>
   </div>
   <ul class="flex flex-col mx-4 py-4">
+    <span class="text-gray-500 text-sm">View</span>
+    <li>
+      <button id="sbBtn" hx-trigger="click,{{ .DashboardTrigger }}" hx-get="/dashboard" hx-push-url="true"
+        hx-swap="innerHTML" hx-target="#contenido"
+        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
+        <span class="inline-flex text-inherit items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+            class="text-inherit bx bx-table"></i></span>
+        <span class="text-sm font-medium">Dashboard</span>
+      </button>
+    </li>
     <span class="text-gray-500 text-sm">Track</span>
     <li>
       <button id="sbBtn" hx-trigger="click,{{ .ExpensesTrigger }}" hx-get="/expenses" hx-push-url="true"
