--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -1,5 +1,6 @@
 {{define "sidebar"}}
-<div id="sidebar" class="hidden lg:flex min-h-screen flex-col w-auto border-r border-neutral-200 shadow-sm bg-stone-50 overflow-hidden">
+<div id="sidebar"
+  class="hidden lg:flex min-h-screen flex-col w-auto border-r border-neutral-200 shadow-sm bg-stone-50 overflow-hidden">
   <div class="flex items-center justify-center h-25 mt-2 pointer-events-none">
     <img width="90" src="/assets/img/logo.png" alt="">
     <h1 class="text-2xl pr-2 pt-4 text-slate-800">Expense<br>
@@ -13,7 +14,7 @@
         hx-swap="innerHTML" hx-target="#contenido"
         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
         <span class="inline-flex text-inherit items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-            class="text-inherit bx bx-table"></i></span>
+            class="text-inherit bx bxs-dashboard"></i></span>
         <span class="text-sm font-medium">Dashboard</span>
       </button>
     </li>
@@ -36,31 +37,31 @@
         <span class="text-sm font-medium">Import CSV</span>
       </button>
     </li>
-    <span class="text-gray-500 text-sm">Manage</span>
-    <button id="sbBtn" hx-trigger="click,{{ .SettingsTrigger }}" hx-get="/settings" hx-swap="innerHTML"
-      hx-target="#contenido" hx-push-url="true"
-      class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
-      <span class="inline-flex items-center text-inherit justify-center h-12 w-12 text-lg text-gray-400">
-        <i class='text-inherit bx bx-cog'></i>
-      </span>
-      <span class="text-sm font-medium">Settings</span>
-    </button>
-    </li>
-    <span class="text-gray-500 text-sm">Upcoming</span>
     <li>
-      <button id="sbBtn" class="flex pointer-events-none flex-row items-center h-12 text-gray-400 block">
-        <span class="inline-flex text-inherit items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-            class="text-inherit bx bxs-dashboard"></i></span>
-        <span class="text-sm font-medium">Dashboard</span>
+      <span class="text-gray-500 text-sm">Manage</span>
+      <button id="sbBtn" hx-trigger="click,{{ .SettingsTrigger }}" hx-get="/settings" hx-swap="innerHTML"
+        hx-target="#contenido" hx-push-url="true"
+        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
+        <span class="inline-flex items-center text-inherit justify-center h-12 w-12 text-lg text-gray-400">
+          <i class='text-inherit bx bx-cog'></i>
+        </span>
+        <span class="text-sm font-medium">Settings</span>
       </button>
     </li>
-    <li>
+    <!-- <span class="text-gray-500 text-sm">Upcoming</span> -->
+    <!-- <li> -->
+    <!--   <button id="sbBtn" class="flex pointer-events-none flex-row items-center h-12 text-gray-400 block"> -->
+    <!--     <span class="inline-flex text-inherit items-center justify-center h-12 w-12 text-lg text-gray-400"><i -->
+    <!--         class="text-inherit bx bxs-dashboard"></i></span> -->
+    <!--     <span class="text-sm font-medium">Dashboard</span> -->
+    <!--   </button> -->
+    <!-- </li> -->
   </ul>
   <div class="absolute left-0 text-lg text-gray-500 bottom-0 m-2">
     <a href="https://github.com/contre95/expense-mate" target="_blank">
-  <i class='bx bxl-github text-3xl' ></i>
+      <i class='bx bxl-github text-3xl'></i>
     </a>
-</div>
+  </div>
 </div>
 <script>
   // Function to initialize select2
